--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-clients/test-utilities",
+  "name": "wyrihaximus/async-test-utilities",
   "description": "Test utilities for api-clients packages",
   "license": "MIT",
   "authors": [
@@ -12,15 +12,7 @@
     "php": "^7.2",
     "api-clients/cs-fixer-config": "^1.1.1",
     "clue/block-react": "^1.3",
-    "composer/composer": "^1.8",
-    "friendsofphp/php-cs-fixer": "^2.14",
-    "infection/infection": "^0.11.4",
-    "jakub-onderka/php-console-highlighter": "^0.4",
-    "jakub-onderka/php-parallel-lint": "^1.0.0",
-    "localheinz/composer-normalize": "^1.0.0",
-    "nunomaduro/collision": "^2.1",
-    "phpstan/phpstan": "^0.10.7",
-    "phpunit/phpunit": "^7.5"
+    "wyrihaximus/test-utilities": "dev-master"
   },
   "require-dev": {},
   "config": {
@@ -31,12 +23,12 @@
   },
   "autoload": {
     "psr-4": {
-      "ApiClients\\Tools\\TestUtilities\\": "src/"
+      "WyriHaximus\\AsyncTestUtilities\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "ApiClients\\Tests\\Tools\\TestUtilities\\": "tests/"
+      "WyriHaximus\\Tests\\AsyncTestUtilities\\": "tests/"
     },
     "files": [
       "tests/bootstrap.php"
