--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,14 @@ matrix:
     - php: 7.2
       env:
         - qaExtended=true
+    - php: 7.3
     - php: nightly
       env:
         - dropPlatform=false
     - php: 7.2
+      env:
+        - dependencies=lowest
+    - php: 7.3
       env:
         - dependencies=lowest
     - php: nightly
@@ -24,6 +28,9 @@ matrix:
         - dependencies=lowest
         - dropPlatform=false
     - php: 7.2
+      env:
+        - dependencies=highest
+    - php: 7.3
       env:
         - dependencies=highest
     - php: nightly
