--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,7 @@
     ],
     "stan": [
       "@ensure-installed",
-      "phpstan analyse src tests --level max --ansi"
+      "phpstan analyse src tests --level max --ansi -c phpstan.neon"
     ],
     "unit": [
       "@ensure-installed",
