Corrected class that is allowed to be extended

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 parameters:
 	classesAllowedToBeExtended:
-		- WyriHaximus\AsyncTestUtilities\TestCase
+		- WyriHaximus\AsyncTestUtilities\AsyncTestCase
 
 includes:
 	- vendor/wyrihaximus/test-utilities/rules.neon
