--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,8 @@
 parameters:
+	ignoreErrors:
+		- '#Default value of the parameter \#3 $timeout \(60\) of method WyriHaximus\AsyncTestUtilities\AsyncTestCase::await\(\) is incompatible with type float\|null.#'
+		- '#Method [a-zA-Z0-9\\_]+::[a-zA-Z0-9_]+\(\) has parameter \$[a-zA-Z0-9_]+ with a nullable type declaration.#'
+		- '#Method [a-zA-Z0-9\\_]+::[a-zA-Z0-9_]+\(\) has parameter \$[a-zA-Z0-9_]+ with null as default value.#'
 	classesAllowedToBeExtended:
 		- WyriHaximus\AsyncTestUtilities\AsyncTestCase
 
