--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": "^7.3",
     "clue/block-react": "^1.3",
+    "phpunit/phpunit": "^8.3",
     "react/event-loop": "^1.1",
     "react/promise": "^2.7",
     "wyrihaximus/cs-fixer-config": "^1.0.1",
