Test utilities 2.0 (PHP 7.4+)

--- a/rules.neon
+++ b/rules.neon
@@ -1,6 +1,7 @@
 parameters:
-	classesAllowedToBeExtended:
-		- WyriHaximus\AsyncTestUtilities\AsyncTestCase
+	ergebnis:
+		classesAllowedToBeExtended:
+			- WyriHaximus\AsyncTestUtilities\AsyncTestCase
 
 includes:
 	- ../test-utilities/rules.neon
