--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
     }
   ],
   "require": {
-    "php": "^7.3",
+    "php": "^7.4",
     "clue/block-react": "^1.3",
     "phpunit/phpunit": "^8.4",
     "react/event-loop": "^1.1",
     "react/promise": "^2.7",
-    "wyrihaximus/cs-fixer-config": "^1.0.1",
-    "wyrihaximus/test-utilities": "^1.6.1"
+    "wyrihaximus/coding-standard": "^1.0.0-alpha1",
+    "wyrihaximus/test-utilities": "^2.0.0-alpha1"
   },
   "require-dev": {
     "wyrihaximus/iterator-or-array-to-array": "^1.1"
   },
   "config": {
     "platform": {
-      "php": "7.3"
+      "php": "7.4"
     },
     "sort-packages": true
   },
@@ -45,82 +45,6 @@
     ],
     "post-update-cmd": [
       "composer normalize"
-    ],
-    "ci-coverage": [
-      "if [ -f ./build/logs/clover.xml ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover ./build/logs/clover.xml; fi"
-    ],
-    "composer-require-checker": [
-      "@ensure-installed",
-      "composer-require-checker --ignore-parse-errors --ansi -vvv  --config-file=composer-require-checker.json"
-    ],
-    "cs": [
-      "@ensure-installed",
-      "php-cs-fixer fix --config=.php_cs --ansi --dry-run --diff --verbose --allow-risky=yes --show-progress=estimating"
-    ],
-    "cs-fix": [
-      "@ensure-installed",
-      "php-cs-fixer fix --config=.php_cs --ansi --verbose --allow-risky=yes --show-progress=estimating"
-    ],
-    "ensure-installed": "composer install --ansi -n -q",
-    "infection": [
-      "@ensure-installed",
-      "infection --ansi --min-msi=100 --min-covered-msi=100 --threads=32"
-    ],
-    "lint-php": [
-      "@ensure-installed",
-      "parallel-lint --exclude vendor ."
-    ],
-    "psalm": [
-      "@ensure-installed",
-      "psalm --threads=32"
-    ],
-    "qa-all": [
-      "composer validate --ansi",
-      "composer normalize --ansi",
-      "composer unused --ansi",
-      "@lint-php",
-      "@cs",
-      "@stan",
-      "@psalm",
-      "@unit",
-      "@infection",
-      "@composer-require-checker"
-    ],
-    "qa-all-extended": [
-      "composer validate --ansi",
-      "composer normalize --ansi",
-      "composer unused --ansi",
-      "@lint-php",
-      "@cs",
-      "@stan",
-      "@psalm",
-      "@unit-coverage",
-      "@infection",
-      "@composer-require-checker"
-    ],
-    "qa-ci": [
-      "@unit"
-    ],
-    "qa-ci-extended": [
-      "@qa-all-extended"
-    ],
-    "qa-ci-windows": [
-      "@qa-windows"
-    ],
-    "qa-contrib": [
-      "@qa-all"
-    ],
-    "stan": [
-      "@ensure-installed",
-      "phpstan analyse src tests --level max --ansi -c phpstan.neon"
-    ],
-    "unit": [
-      "@ensure-installed",
-      "phpunit --colors=always -c phpunit.xml.dist"
-    ],
-    "unit-coverage": [
-      "@ensure-installed",
-      "phpunit --colors=always -c phpunit.xml.dist --coverage-text --coverage-html covHtml --coverage-clover ./build/logs/clover.xml"
     ]
   }
 }
