--- a/infection.json.dist
+++ b/infection.json.dist
@@ -7,5 +7,13 @@
     },
     "logs": {
         "text": "infection-log.txt"
+    },
+    "mutators": {
+        "@default": true,
+        "ArrayItemRemoval": {
+            "ignore": [
+                "WyriHaximus\\AsyncTestUtilities\\AsyncTestCase::provideEventLoop"
+            ]
+        }
     }
 }
