--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,8 +2,10 @@ parameters:
 	ignoreErrors:
 		- '#Method [a-zA-Z0-9\\_]+::[a-zA-Z0-9_]+\(\) has parameter \$[a-zA-Z0-9_]+ with a nullable type declaration.#'
 		- '#Method [a-zA-Z0-9\\_]+::[a-zA-Z0-9_]+\(\) has parameter \$[a-zA-Z0-9_]+ with null as default value.#'
-	classesAllowedToBeExtended:
-		- WyriHaximus\AsyncTestUtilities\AsyncTestCase
+		- '#Method WyriHaximus\\AsyncTestUtilities\\CallableStub::__invoke\(\) is not final, but since the containing class is abstract, it should be.#'
+	ergebnis:
+		classesAllowedToBeExtended:
+			- WyriHaximus\AsyncTestUtilities\AsyncTestCase
 
 includes:
 	- vendor/wyrihaximus/test-utilities/rules.neon
