--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -11,3 +11,6 @@ update_configs:
           - match:
                 dependency_type: "all"
                 update_type: "semver:minor"
+          - match:
+                dependency_type: "all"
+                update_type: "semver:patch"
