--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "phpunit/phpunit": "^9.0",
     "react/event-loop": "^1.1",
     "react/promise": "^2.7",
-    "wyrihaximus/coding-standard": "^1.0.0-alpha1",
-    "wyrihaximus/test-utilities": "^2.0.0-alpha1"
+    "wyrihaximus/coding-standard": "^1.0",
+    "wyrihaximus/test-utilities": "^2.0"
   },
   "require-dev": {
     "wyrihaximus/iterator-or-array-to-array": "^1.1"
