--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
             matrix:
                 php: [7.4]
                 composer: [lowest, current, highest]
-                qa: [lint, cs, stan, psalm, unit-ci, infection, composer-require-checker, composer-unused]
+                qa: [lint, cs, stan, psalm, unit-ci, infection, composer-require-checker, composer-unused, backward-compatibility-check]
         needs: composer-install
         runs-on: ubuntu-latest
         container:
