Change to increase verions on Dependabot update

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,5 @@ updates:
       labels:
           - "Dependencies 📦"
           - "PHP 🐘"
-      versioning-strategy: "widen"
+      versioning-strategy: "increase"
       open-pull-requests-limit: 1
