--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "phpunit/phpunit": "^9.4",
     "react/event-loop": "^1.1",
     "react/promise": "^2.8",
-    "wyrihaximus/test-utilities": "^2.9 || ^3.0"
+    "wyrihaximus/test-utilities": "^3"
   },
   "require-dev": {
     "wyrihaximus/iterator-or-array-to-array": "^1.1"
