--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^8 || ^7.4",
     "clue/block-react": "^1.4",
     "phpunit/phpunit": "^9.4",
     "react/event-loop": "^1.1",
     "react/promise": "^2.8",
-    "wyrihaximus/test-utilities": "^3.1"
+    "wyrihaximus/test-utilities": "^3.3"
   },
   "require-dev": {
     "wyrihaximus/iterator-or-array-to-array": "^1.1"
