Set milestone using Chores.Dev

--- a/.github/workflows/set-milestone-on-pr.yaml
+++ b/.github/workflows/set-milestone-on-pr.yaml
@@ -48,6 +48,10 @@ jobs:
           MAJOR: ${{ steps.semvers.outputs.major }}
           MINOR: ${{ steps.semvers.outputs.minor }}
           PATCH: ${{ steps.semvers.outputs.patch }}
+      - name: 'Set Milestone through Chores.Dev'
+        uses: "chores-dev/set-milestone-action@main"
+        with:
+          milestone: ${{ steps.decidedversion.outputs.version }}
       - name: 'Get Milestones'
         uses: "WyriHaximus/github-action-get-milestones@master"
         id: milestones
