--- a/.github/workflows/set-milestone-on-pr.yaml
+++ b/.github/workflows/set-milestone-on-pr.yaml
@@ -22,6 +22,8 @@ jobs:
       check: ${{ steps.generate-checks-strategy.outputs.check }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Required due to the way Git works, without it this action won't be able to find any or the correct tags
       - name: 'Get Previous tag'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
