--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 version: 2
 updates:
-    - package-ecosystem: "composer"
-      directory: "/"
-      schedule:
-          interval: "daily"
-          time: "05:00"
-      labels:
-          - "Dependencies 📦"
-          - "PHP 🐘"
-      versioning-strategy: "increase"
+  - package-ecosystem: "composer"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "03:00"
+    labels:
+      - "Dependabot 🤖"
+    versioning-strategy: "increase"
+    open-pull-requests-limit: 1
