Introduce Dependabot for GitHub Actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,9 @@ updates:
       - "Dependabot 🤖"
     versioning-strategy: "increase"
     open-pull-requests-limit: 1
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    labels:
+      - "Dependabot 🤖"
