--- a/etc/qa/phpstan.neon
+++ b/etc/qa/phpstan.neon
@@ -3,6 +3,9 @@ parameters:
 		- tests/bootstrap.php
 	ignoreErrors:
 		- '#Method WyriHaximus\\AsyncTestUtilities\\CallableStub::__invoke\(\) is not final, but since the containing class is abstract, it should be.#'
+		- '#Call to deprecated method await\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
+		- '#Call to deprecated method awaitAll\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
+		- '#Call to deprecated method awaitAny\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
 	ergebnis:
 		classesAllowedToBeExtended:
 			- WyriHaximus\AsyncTestUtilities\AsyncTestCase
