--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "wyrihaximus/test-utilities": "^5.5.0 || ^6"
   },
   "require-dev": {
+    "react/promise-timer": "^1.9",
     "wyrihaximus/iterator-or-array-to-array": "^1.2"
   },
   "autoload": {
