--- a/etc/qa/phpstan.neon
+++ b/etc/qa/phpstan.neon
@@ -1,8 +1,12 @@
 parameters:
-	excludes_analyse:
+	excludePaths:
 		- tests/bootstrap.php
 	ignoreErrors:
+		- '#Parameter \#1 \$name of method PHPUnit\\Framework\\TestCase::setName\(\) expects string, string\|null given.#'
+		- '#Trying to invoke array\{\$this\(WyriHaximus\\AsyncTestUtilities\\AsyncTestCase\), string\|null\} but it might not be a callable.#'
 		- '#Method WyriHaximus\\AsyncTestUtilities\\CallableStub::__invoke\(\) is not final, but since the containing class is abstract, it should be.#'
+		- '#Parameter \#1 \$name of method ReflectionClass\<\$this\(WyriHaximus\\AsyncTestUtilities\\AsyncTestCase\)\>::getMethod\(\) expects string, string\|null given.#'
+		- '#Call to an undefined method React\\Promise\\PromiseInterface\<mixed\>::always\(\).#'
 		- '#Call to deprecated method await\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
 		- '#Call to deprecated method awaitAll\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
 		- '#Call to deprecated method awaitAny\(\) of class WyriHaximus\\AsyncTestUtilities\\AsyncTestCase#'
