--- a/rules.neon
+++ b/rules.neon
@@ -1,7 +1,8 @@
 parameters:
 	ergebnis:
-		classesAllowedToBeExtended:
-			- WyriHaximus\AsyncTestUtilities\AsyncTestCase
+		noExtends:
+			classesAllowedToBeExtended:
+				- WyriHaximus\AsyncTestUtilities\AsyncTestCase
 
 includes:
 	- ../test-utilities/rules.neon
