Switch CI workflow to main external branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ permissions:
 jobs:
   ci:
     name: Continuous Integration
-    uses: WyriHaximus/github-workflows/.github/workflows/package.yaml@package
+    uses: WyriHaximus/github-workflows/.github/workflows/package.yaml@main
