--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,26 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
-    {
-      "managers": ["composer"],
-      "rangeStrategy": "in-range-only"
-    },
-    {
-      "managers": ["composer"],
-      "rangeStrategy": "bump"
-    },
-    {
-      "managers": ["composer"],
-      "matchPackageNames": ["php"],
-      "enabled": false
-    }
-  ],
   "extends": [
-    "config:base",
-    ":widenPeerDependencies",
-    ":rebaseStalePrs",
-    ":prHourlyLimitNone",
-    ":prConcurrentLimitNone",
-    "group:phpstan"
+    "github>WyriHaximus/renovate-config"
   ]
 }
