--- a/.github/workflows/craft-release.yaml
+++ b/.github/workflows/craft-release.yaml
@@ -5,52 +5,14 @@ on:
   milestone:
     types:
       - closed
+permissions:
+  contents: write
+  issues: read
+  pull-requests: read
 jobs:
-  generate-changelog:
-    name: Generate Changelog
-    runs-on: ubuntu-latest
-    outputs:
-      changelog: ${{ steps.changelog.outputs.changelog }}
-    steps:
-      - name: Generate changelog
-        uses: WyriHaximus/github-action-jwage-changelog-generator@v1
-        id: changelog
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          milestone: ${{ env.MILESTONE }}
-      - name: Show changelog
-        run: echo "${CHANGELOG}"
-        env:
-          CHANGELOG: ${{ steps.changelog.outputs.changelog }}
   create-release:
     name: Create Release
-    needs:
-      - generate-changelog
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        env:
-          CHANGELOG: ${{ needs.generate-changelog.outputs.changelog }}
-      - run: |
-          echo -e "${MILESTONE_DESCRIPTION}\r\n\r\n${CHANGELOG}" > release-${{ env.MILESTONE }}-release-message.md
-          cat release-${{ env.MILESTONE }}-release-message.md
-          release_message=$(cat release-${{ env.MILESTONE }}-release-message.md)
-          release_message="${release_message//'%'/'%25'}"
-          release_message="${release_message//$'\n'/'%0A'}"
-          release_message="${release_message//$'\r'/'%0D'}"
-          echo "::set-output name=release_message::$release_message"
-        id: releasemessage
-        env:
-          MILESTONE_DESCRIPTION: ${{ github.event.milestone.description }}
-          CHANGELOG: ${{ needs.generate-changelog.outputs.changelog }}
-      - name: Create Reference Release with Changelog
-        uses: fleskesvor/create-release@feature/support-target-commitish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.MILESTONE }}
-          release_name: ${{ env.MILESTONE }}
-          body: ${{ steps.releasemessage.outputs.release_message }}
-          draft: false
-          prerelease: false
+    uses: WyriHaximus/github-workflows/.github/workflows/package-craft-release.yaml@main
+    with:
+      milestone: ${{ github.event.milestone.title }}
+      description: ${{ github.event.milestone.title }}
