--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "react/async": "^4.2.0",
     "react/event-loop": "^1.5.0",
     "react/promise": "^3.1",
+    "wyrihaximus/phpstan-react": "^1",
     "wyrihaximus/test-utilities": "^5.5.4 || ^6"
   },
   "require-dev": {
@@ -48,6 +49,11 @@
       "php": "8.2.13"
     },
     "sort-packages": true
+  },
+  "extra": {
+    "unused": [
+      "wyrihaximus/phpstan-react"
+    ]
   },
   "scripts": {
     "post-install-cmd": [
