--- a/etc/qa/phpstan.neon
+++ b/etc/qa/phpstan.neon
@@ -15,3 +15,4 @@ parameters:
 
 includes:
 	- ../../vendor/wyrihaximus/test-utilities/rules.neon
+	- ../../vendor/wyrihaximus/phpstan-react/phpstan-reactphp-rules.neon
