--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "phpunit/phpunit": "^9.6.15",
     "react/async": "^4.2.0",
     "react/event-loop": "^1.5.0",
-    "react/promise": "^2.10 || ^3.0",
+    "react/promise": "^3.1",
     "wyrihaximus/test-utilities": "^5.5.4 || ^6"
   },
   "require-dev": {
