--- a/infection.json.dist
+++ b/infection.json.dist
@@ -1,20 +1,20 @@
 {
-    "timeout": 120,
+    "timeout": 300,
     "source": {
         "directories": [
             "src"
         ]
     },
     "logs": {
-        "text": "infection-log.txt"
+        "text": "./var/infection.log",
+        "summary": "./var/infection-summary.log",
+        "json": "./var/infection.json",
+        "perMutator": "./var/infection-per-mutator.md"
     },
     "mutators": {
-        "@default": true,
-        "InstanceOf_": false,
-        "ArrayItemRemoval": {
-            "ignore": [
-                "WyriHaximus\\AsyncTestUtilities\\AsyncTestCase::provideEventLoop"
-            ]
-        }
+        "@default": true
+    },
+    "phpUnit": {
+        "configDir": "./etc/qa/"
     }
 }
