--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     "wyrihaximus/test-utilities": "^5.5.4 || ^6"
   },
   "require-dev": {
-    "react/promise-timer": "^1.10.0",
-    "wyrihaximus/iterator-or-array-to-array": "^1.2"
+    "react/promise-timer": "^1.10.0"
   },
   "conflict": {
     "composer/compoer": "<2.6.0"
