--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
   ],
   "require": {
     "php": "^8.2",
-    "phpunit/phpunit": "^9.6.18",
+    "phpunit/phpunit": "^10.5.16",
     "react/async": "^4.2.0",
     "react/event-loop": "^1.5.0",
     "react/promise": "^3.1",
     "wyrihaximus/phpstan-react": "^1",
-    "wyrihaximus/react-phpunit-run-tests-in-fiber": "^1.0.1",
-    "wyrihaximus/test-utilities": "^5.5.4 || ^6"
+    "wyrihaximus/react-phpunit-run-tests-in-fiber": "^2.0.0",
+    "wyrihaximus/test-utilities": "^6.0.0"
   },
   "require-dev": {
     "react/promise-timer": "^1.10.0"
