--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
     }
   ],
   "require": {
-    "php": "^8.2",
-    "phpunit/phpunit": "^10.5.29",
+    "php": "^8.3",
+    "phpunit/phpunit": "^12.1.2",
     "react/async": "^4.3.0",
     "react/event-loop": "^1.5.0",
     "react/promise": "^3.2.0",
     "wyrihaximus/phpstan-react": "^1",
-    "wyrihaximus/react-phpunit-run-tests-in-fiber": "^2.0.0",
-    "wyrihaximus/test-utilities": "^6.0.9"
+    "wyrihaximus/react-phpunit-run-tests-in-fiber": "dev-main as 3.0.0",
+    "wyrihaximus/test-utilities": "dev-master as 7.0.0"
   },
   "require-dev": {
-    "react/promise-timer": "^1.11.0"
+    "react/promise-timer": "^1.11.0",
+    "wyrihaximus/makefiles": "^0.1.0"
   },
   "conflict": {
     "composer/compoer": "<2.6.0"
@@ -32,10 +33,7 @@
   "autoload-dev": {
     "psr-4": {
       "WyriHaximus\\Tests\\AsyncTestUtilities\\": "tests/"
-    },
-    "files": [
-      "tests/bootstrap.php"
-    ]
+    }
   },
   "config": {
     "allow-plugins": {
@@ -44,10 +42,11 @@
       "ergebnis/composer-normalize": true,
       "icanhazstring/composer-unused": true,
       "infection/extension-installer": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "wyrihaximus/makefiles": true
     },
     "platform": {
-      "php": "8.2.13"
+      "php": "8.3.13"
     },
     "sort-packages": true
   },
