--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
       "dealerdirect/phpcodesniffer-composer-installer": true,
       "ergebnis/composer-normalize": true,
       "icanhazstring/composer-unused": true,
-      "infection/extension-installer": true
+      "infection/extension-installer": true,
+      "phpstan/extension-installer": true
     },
     "platform": {
       "php": "8.2.13"
