--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "react/async": "^4.3.0",
     "react/event-loop": "^1.5.0",
     "react/promise": "^3.2.0",
-    "wyrihaximus/phpstan-react": "^1",
+    "wyrihaximus/phpstan-react": "dev-main as 2.0.0",
     "wyrihaximus/react-phpunit-run-tests-in-fiber": "dev-main as 3.0.0",
     "wyrihaximus/test-utilities": "dev-master as 7.0.0"
   },
