Turn into PHPStan extension

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,13 @@
     },
     "sort-packages": true
   },
+  "extra": {
+    "phpstan": {
+      "includes": [
+        "extension.neon"
+      ]
+    }
+  },
   "scripts": {
     "post-install-cmd": [
       "composer normalize",
