--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "react/promise": "^3.2.0",
     "wyrihaximus/phpstan-react": "^2.0.0",
     "wyrihaximus/react-phpunit-run-tests-in-fiber": "^3.0.0",
-    "wyrihaximus/test-utilities": "^7.5.2"
+    "wyrihaximus/test-utilities": "^8.1.0"
   },
   "require-dev": {
     "react/promise-timer": "^1.11.0",
@@ -43,7 +43,8 @@
       "icanhazstring/composer-unused": true,
       "infection/extension-installer": true,
       "phpstan/extension-installer": true,
-      "wyrihaximus/makefiles": true
+      "wyrihaximus/makefiles": true,
+      "wyrihaximus/test-utilities": true
     },
     "platform": {
       "php": "8.4.13"
@@ -59,12 +60,10 @@
   },
   "scripts": {
     "post-install-cmd": [
-      "composer normalize",
-      "composer update --lock --no-scripts"
+      "make on-install-or-update || true"
     ],
     "post-update-cmd": [
-      "composer normalize",
-      "composer update --lock --no-scripts"
+      "make on-install-or-update || true"
     ]
   }
 }
